<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout style="@style/history">

            <TextView
                style="@style/history_text"
                android:text="@string/car_phone" />

            <TextView
                android:id="@+id/history_car_code"
                style="@style/history_text"
                android:text="京B 4****34" />
        </LinearLayout>

        <LinearLayout style="@style/history">

            <TextView
                style="@style/history_text"
                android:text="停  车  场 :" />

            <TextView
                android:id="@+id/car_name"
                style="@style/history_text"
                android:text="车易付" />
        </LinearLayout>

        <LinearLayout style="@style/history">

            <TextView
                style="@style/history_text"
                android:text="@string/in_time" />

            <TextView
                android:id="@+id/car_time"
                style="@style/history_text"
                android:text="2017-02-16  06：45：33" />
        </LinearLayout>

        <LinearLayout
            style="@style/history"
            android:layout_marginBottom="10dp">

            <TextView
                style="@style/history_text"
                android:text="@string/out_time" />

            <TextView
                android:id="@+id/out"
                style="@style/history_text"
                android:text="未入场"
                 />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
