<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white"
    android:id="@+id/my_center">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y85">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/my_center"
            android:textSize="20sp"
            />

        <RelativeLayout
            android:id="@+id/setting"
            android:layout_width="@dimen/x80"
            android:layout_height="@dimen/x80"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/x30">

            <ImageView
                android:layout_width="@dimen/x50"
                android:layout_height="@dimen/x50"
                android:layout_centerInParent="true"
                android:background="@drawable/install" />

        </RelativeLayout>
    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/x400"
        android:background="@drawable/bg">

        <LinearLayout
            android:id="@+id/my_iv_bg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">
           <!-- <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/my_pic"
                android:layout_width="@dimen/x160"
                android:layout_height="@dimen/x160"
                fresco:actualImageScaleType="focusCrop"
                fresco:placeholderImage="@mipmap/ic_launcher"
                fresco:placeholderImageScaleType="fitCenter"
                fresco:progressBarImage="@mipmap/ic_launcher"
                fresco:progressBarImageScaleType="centerInside"
                fresco:progressBarAutoRotateInterval="2000"
                fresco:failureImage="@mipmap/ic_launcher"
                fresco:failureImageScaleType="centerInside"
                fresco:fadeDuration="5000"
                />-->

            <TextView
                android:id="@+id/my_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y105"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
           >

            <TextView
                android:id="@+id/eb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0.00"
                android:textColor="@color/center_color"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="2dp"
                android:text="@string/yu_e"
                android:textSize="15sp" />


        </LinearLayout>

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/gray" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
          >

            <TextView
                android:id="@+id/discount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0.00"
                android:textColor="@color/center_color"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="2dp"
                android:text="@string/ingetral"
                android:textSize="15sp" />


        </LinearLayout>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal">

        <LinearLayout
            android:layout_marginTop="@dimen/x30"
            android:id="@+id/ll_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:layout_width="@dimen/x100"
                android:layout_height="@dimen/x100"
                android:background="@drawable/renzheng" />

            <TextView
                style="@style/my_center"
                android:text="@string/che_sure" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/x30"
            android:id="@+id/ll_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:layout_width="@dimen/x100"
                android:layout_height="@dimen/x100"
                android:background="@drawable/management" />

            <TextView
                style="@style/my_center"
                android:text="@string/car_manage" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/x30"
            android:id="@+id/ll_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:layout_width="@dimen/x100"
                android:layout_height="@dimen/x100"
                android:background="@drawable/wangzhan" />

            <TextView
                style="@style/my_center"
                android:text="@string/guan_wang" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/x100"
        android:layout_marginRight="@dimen/x100"
        android:layout_marginTop="@dimen/x30"
        android:layout_marginBottom="@dimen/x30"
        android:background="@color/green_color" />

    <LinearLayout
        android:id="@+id/ll_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/ll_6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:layout_width="@dimen/x100"
                android:layout_height="@dimen/x100"
                android:background="@drawable/problem_feedback" />

            <TextView
                style="@style/my_center"
                android:text="@string/wen_ti" />

        </LinearLayout>




        <LinearLayout
            android:id="@+id/about_us"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:layout_width="@dimen/x100"
                android:layout_height="@dimen/x100"
                android:background="@drawable/about_us" />

            <TextView
                style="@style/my_center"
                android:text="@string/about" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/tuijian"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:layout_width="@dimen/x100"
                android:layout_height="@dimen/x100"
                android:background="@drawable/recommend" />

            <TextView
                style="@style/my_center"
                android:text="@string/tuijian" />

        </LinearLayout>



    </LinearLayout>

</LinearLayout>
